code: fix layout issues. The post container should grow. Add a new comment to see the layout with multiple comments.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -162,6 +162,7 @@
   background-color: #F5F5F6;
   color: #000;
   padding: 24px;
+  overflow: hidden;
 }
 
 .post-votes {
@@ -181,7 +182,7 @@
   width: 30px;
   height: 30px;
   background-image: url('./icons/down_arrow.svg');
-  background-size: 18px;
+  background-size: 15px;
   transform: rotate(180deg);
   box-shadow: 0 -3px 6px rgba(0,0,0,0.16), 0 -3px 6px rgba(0,0,0,0.23);
 }
@@ -190,7 +191,7 @@
   width: 30px;
   height: 30px;
   background-image: url('./icons/down_arrow.svg');
-  background-size: 18px;
+  background-size: 15px;
 }
 
 .post-wrapper {
@@ -212,5 +213,5 @@
   width: 50px;
   height: 50px;
   background-image: url('./icons/add.svg');
-  background-size: 28px;
+  background-size: 25px;
 }
